--- a/Develop/style.css
+++ b/Develop/style.css
@@ -18,6 +18,7 @@ a:hover {
   color: white;
   margin: 2px;
   padding: 3px 6px;
+  box-shadow: none;
 }
 
 .btn-primary:hover,
@@ -25,6 +26,7 @@ a:hover {
 .btn-primary:focus {
   background-color: rgb(150, 90, 150) !important;
   border-color: rgb(150, 90, 150) !important;
+  box-shadow: none !important;
 }
 
 #welcome,
